# hooksmith

./: Cargo.toml  README.md  hooksmith.yaml  sonar-project.properties
.github/workflows/: SonarQube-Scan.yaml  dependencies.yaml  release.yaml  release_body.md  rust.yaml
completions/: hooksmith.fish
src/: cli.rs  commands.rs  error.rs  git_related.rs  hooksmith.rs  lib.rs  main.rs  my_clap_theme.rs  utils.rs
tests/: cli_tests.rs
