[package]
authors = ["Tom Planche <tomplanche@proton.me>"]
categories = ["command-line-utilities"]
description = "Trivial git hook management tool"
edition = "2021"
homepage = "https://github.com/TomPlanche/hooksmith"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]
keywords = ["cli", "git", "git-hooks", "rust"]
license = "Apache-2.0 OR MIT"
name = "hooksmith"
readme = "README.md"
repository = "https://github.com/TomPlanche/hooksmith"
version = "1.8.1"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"

[lib]
name = "hooksmith"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.19.1"
