[package]
authors = ["Tom Planche <tomplanche@proton.me>"]
categories = ["command-line-utilities"]
description = "Trivial git hook management tool"
edition = "2021"
homepage = "https://github.com/TomPlanche/hooksmith"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]
keywords = ["cli", "git", "git-hooks", "rust"]
license = "Apache-2.0 OR MIT"
name = "hooksmith"
readme = "README.md"
repository = "https://github.com/TomPlanche/hooksmith"
version = "1.11.0"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"

[lib]
name = "hooksmith"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = false
